Updated unicode diagram to fit

--- a/README.org
+++ b/README.org
@@ -11,13 +11,13 @@ There are 3 components to the remote server design:
 - server-daemon
 
 #+begin_src
-┌────────────────────┐                   ┌────────────────────┐                   ┌────────────────────┐
-│                    │                   │                    │ ----------------> │                    │
-│                    │                   │                    │ <---------------- │                    │
-│  client interface  │ ----------------> │    client daemon   │ ----------------> │    server daemon   │
-│                    │ <---------------- │                    │ <---------------- │                    │
-│                    │                   │                    │ ----------------> │                    │
-└────────────────────┘                   └────────────────────┘ <---------------- └────────────────────┘
+┌────────────────────┐             ┌─────────────────┐            ┌─────────────────┐
+│                    │             │                 │ ---------> │                 │
+│                    │             │                 │ <--------- │                 │
+│  client interface  │ ----------> │  client daemon  │ ---------> │  server daemon  │
+│                    │ <---------- │                 │ <--------- │                 │
+│                    │             │                 │ ---------> │                 │
+└────────────────────┘             └─────────────────┘ <--------- └─────────────────┘
 #+end_src
 
 ** Client interface
